--- a/index.html
+++ b/index.html
@@ -1,39 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Christopher Welte - Designer</title>
-	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-	<link href="css/main.css" rel="stylesheet" type="text/css" />
+	<title>KrackenHugger</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300i,400,400i,700,900" rel="stylesheet" /><script src="js/jquery-3.2.0.min.js" type="text/javascript"></script><script src="js/bootstrap.min.js" type="text/javascript"></script><script>
         $(function() {
             $("#mainFooter").load("footer.html");
         });
-    </script><!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries --><!-- WARNING: Respond.js doesn't work if you view the page via file:// --><!--[if lt IE 9]>
-		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
+    </script>
 </head>
 <body>
-<div class="container">
-<div class="containerGrid">
-<div class="row rowMargin">
-<div class="col-sm-8 col-sm-offset-2">
-<div class="col-xs-12 col-sm-8">
-<h1><b>Christopher Welte</b></h1>
-</div>
-
-<div class="col-xs-12 col-sm-4 text-left openBlock visible-xs-block">
-<p><img alt="cat" class="rowPadding img-responsive center-block" src="images/cat.jpg" /></p>
-</div>
-</div>
-
-<div class="row rowMargin">
-<div class="col-xs-12">
-<div class="footer text-center" id="mainFooter"></div>
-</div>
-</div>
-</div>
-</div>
-</div>
+<h1><b>Kracken Hugger</b></h1>
 </body>
 </html>
